--- a/1.html
+++ b/1.html
@@ -3,21 +3,24 @@
 <head>
   <TITLE>ABOUT BALLET</TITLE>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
   <h1><a href="index.html">발레(ballet)란 무엇인가?</a></h1>
-  <ol>
-    <li><a href="1.html">개념 및 정의</a></li>
-    <li><a href="2.html">역사와 발전단계</a></li>
-    <li><a href="3.html">주요 내용</a></li>
-  </ol>
-
-  <h2>개념 및 정의</h2>
-  <p><a href="https://www.pbt.org/learn-and-engage/resources-audience-members/ballet-101/what-is-ballet/"
-    target="_blank" title="what-is-ballet">발레(-, ballet)</a>라는 용어는 <strong>‘<u>춤</u>을 추다’</strong>를 의미하는 이탈리아어 ‘ballare’에서 유래되었다. 일설에 따르면 이탈리아어 ‘balletti(balletto의 복수로 오늘날에 말하는 사교춤)’에서 비롯되었다고도 한다. 발레는 음악, 무대 장치, 의상, 팬터마임 등을 갖추어서 특정한 주제의 이야기를 종합적으로 표현하는 무용이다. 발레 안무가는 이야기를 구성하고 특별한 분위기를 조성하며, 일련의 춤을 서로 연결하거나 무용수들을 추상적인 모형 속에서 개체로 이용하기도 한다.</p>
-  <img src="발레발.jpg" width="30%">
-  <p style="margin-top:35px;">발레는 일반적으로 다리의 포지션에 기초한 클래식 댄스의 정형적인 기법을 사용하는 무용으로 알려져 있다. 그와 달리 그 기법에 제한을 받지 않는 무용은 모던댄스(modern dance)라는 명칭으로 구분하고 있다. 또한 빠 드 되(pas de deux)와 팬터마임 장면 등을 적극적으로 수용하면 클래식발레(classic ballet), 그렇지 않으면 모던발레(modern Ballet)로 구분하기도 한다.
-    [네이버 지식백과] 발레 [Ballet] (학문명백과 : 예술체육, 이기청)</p>
+  <div id="grid">
+    <ol>
+      <li><a href="1.html">개념 및 정의</a></li>
+      <li><a href="2.html">역사와 발전단계</a></li>
+      <li><a href="3.html">주요 내용</a></li>
+    </ol>
+    <div id="article">
+      <h2>개념 및 정의</h2>
+      <p><a href="https://www.pbt.org/learn-and-engage/resources-audience-members/ballet-101/what-is-ballet/"
+        target="_blank" title="what-is-ballet">발레(-, ballet)</a>라는 용어는 <strong>‘<u>춤</u>을 추다’</strong>를 의미하는 이탈리아어 ‘ballare’에서 유래되었다. 일설에 따르면 이탈리아어 ‘balletti(balletto의 복수로 오늘날에 말하는 사교춤)’에서 비롯되었다고도 한다. 발레는 음악, 무대 장치, 의상, 팬터마임 등을 갖추어서 특정한 주제의 이야기를 종합적으로 표현하는 무용이다. 발레 안무가는 이야기를 구성하고 특별한 분위기를 조성하며, 일련의 춤을 서로 연결하거나 무용수들을 추상적인 모형 속에서 개체로 이용하기도 한다.</p>
+        <img src="발레발.jpg" width="30%">
+        <p style="margin-top:35px;">발레는 일반적으로 다리의 포지션에 기초한 클래식 댄스의 정형적인 기법을 사용하는 무용으로 알려져 있다. 그와 달리 그 기법에 제한을 받지 않는 무용은 모던댄스(modern dance)라는 명칭으로 구분하고 있다. 또한 빠 드 되(pas de deux)와 팬터마임 장면 등을 적극적으로 수용하면 클래식발레(classic ballet), 그렇지 않으면 모던발레(modern Ballet)로 구분하기도 한다.
+          [네이버 지식백과] 발레 [Ballet] (학문명백과 : 예술체육, 이기청)</p>
+    </div>
+  </div>
 </body>
 </html>
